modified to fix left/right scrolling issues on small screens
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@10634 48a7a3f7-ad46-0410-b969-29950918272e

--- a/website/modules/styles/creator.css
+++ b/website/modules/styles/creator.css
@@ -127,7 +127,6 @@ html, body
 {
 	margin: 0;			/* Remove body margin/padding */
 	padding: 0;
-	overflow: hidden;	/* Remove scroll bars on browser window */
     height: 100%;
     width: 100%;
 }
@@ -162,8 +161,6 @@ div.ui-layout-north
 {
     list-style-type: none;
     padding: 0;
-
-    overflow: auto;
     height: 470px;
     margin: 3px;
 	width: auto;
@@ -497,26 +494,26 @@ p.heading {
 	font-weight: normal;
 }
 
-div.content table td {
+div.ui-layout-center table td {
 	padding: 5px 15px 5px 5px;
 	white-space:nowrap;
 	font-size: 11px;
 	width: 100px;
 }
 
-div.content table td button {
+div.ui-layout-center table td button {
 	margin-top:-1px;
 	margin-bottom: 0px;
 }
 
-div.content table td select {
+div.ui-layout-center table td select {
 }
 
 table.no-border {
 	margin: -2px 0 -4px -2px ;
 	border:none;
 }
-div.content table.no-border td{
+div.ui-layout-center table.no-border td{
 	padding:0;
 	vertical-align:top;
 	margin:0;
@@ -534,38 +531,41 @@ img.imgexpand {
 	border:none;
 }
 
-.ui-layout-north {
+.ui-layout-north
+{
+    margin: 0;
+    padding: 0;
+}
+
+#modheader {
 	background-color: #cddcf1;
 	padding: 10px 15px 10px 15px;
 	border-bottom: solid 1px #a5c3e6;
+    height: 25px;
+    margin: 0;
 }
 
-.ui-layout-north button{
+#modheader button{
 	margin-top:-2px;
 }
 
-.ui-layout-north button img{
+#modheader button img{
 	padding-right: 5px;
 	margin-left: -5px;
 	vertical-align:top;
 }
 
 .ui-layout-south {
-	position:fixed;
-	z-index: 8000;
-	width: 100%;
-	height: 25px;
 	background-color: #cddcf1;
-	overflow:hidden;
+	overflow:auto;
 	text-align: center;
-	padding-top: 10px;
-	padding-bottom: 0px;
-	bottom:0;
 	background-color: #DFDFB9;
+    padding-top:10px;
+    vertical-align: middle;
 }
 
 .ui-layout-south img{
-	vertical-align:top;
+	vertical-align: top;
 	margin-top:-3px;
 }
 
@@ -586,12 +586,6 @@ input[type="text"] {
 
 .commandtype_table {
 	width: 100%;
-}
-.content {
-	position:fixed;
-	z-index:0;
-	height:84%;
-	padding-bottom: 0;
 }
 
 .ui-button-text {
